--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "Apache 2.0",
     "url": "http://www.apache.org/licenses/LICENSE-2.0"
   }],
-  "main": "index",
+  "bin": { "bbx-framework": "./bin/bbx-framework" },
   "dependencies": {
     "connect": "1.7.x",
     "express": "2.5.0",
@@ -28,6 +28,6 @@
     "README.md",
     "LICENSE",
     "lib",
-    "bin"
+    "bin/bbx-framework"
   ]
 }
