--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,30 @@
 
         <plugins>
             <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+		<artifactId>exec-maven-plugin</artifactId>
+		<version>1.1.1</version>
+		<executions>
+                    <execution>
+		        <phase>package</phase>
+		        <goals>
+		            <goal>exec</goal>
+		        </goals>
+	            </execution>
+		</executions>
+		<configuration>
+		    <executable>jake</executable>
+		    <workingDirectory></workingDirectory>            
+		    <arguments>
+                        <argument>test</argument>						<!--<argument>${project.build.directory}/${project.build.finalName}.jar</argument>-->
+                    </arguments>
+                    <successCodes>
+                        <successCode>0</successCode>
+                    </successCodes>
+		</configuration>
+	    </plugin>
+
+            <plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-assembly-plugin</artifactId>
 				<version>2.2</version>
