Build script to run jake lint

--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 			<configuration>
 			    <executable>sudo</executable>
 			    <arguments>
-		                <argument>configure</argument>
+                                <argument>./configure</argument>
 		            </arguments>
 			</configuration>
 	            </execution>
@@ -40,6 +40,23 @@
 			    <workingDirectory></workingDirectory>            
 			    <arguments>
 		                <argument>test</argument>
+		            </arguments>
+		            <successCodes>
+		                <successCode>0</successCode>
+		            </successCodes>
+			</configuration>
+                    </execution>
+                    <execution>
+			<id>jake-lint</id>
+		        <phase>package</phase>
+		        <goals>
+		            <goal>exec</goal>
+		        </goals>
+			<configuration>
+			    <executable>jake</executable>
+			    <workingDirectory></workingDirectory>            
+			    <arguments>
+		                <argument>lint</argument>
 		            </arguments>
 		            <successCodes>
 		                <successCode>0</successCode>
