--- a/pom.xml
+++ b/pom.xml
@@ -6,85 +6,153 @@
     <packaging>pom</packaging>
     <modelVersion>4.0.0</modelVersion>
 
+    <profiles>
+        <profile>
+            <id>exec-configure-win</id>
+            <activation>
+                <os>
+                    <family>Windows</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.1.1</version>
+                        <executions>
+                            <execution>
+                                <id>configure</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>configure.bat</executable>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>exec-configure-unix</id>
+            <activation>
+                <os>
+                    <family>unix</family>
+                </os>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.codehaus.mojo</groupId>
+                        <artifactId>exec-maven-plugin</artifactId>
+                        <version>1.1.1</version>
+                        <executions>
+                            <execution>
+                                <id>configure</id>
+                                <phase>validate</phase>
+                                <goals>
+                                    <goal>exec</goal>
+                                </goals>
+                                <configuration>
+                                    <executable>sudo</executable>
+                                    <arguments>
+                                        <argument>./configure</argument>
+                                    </arguments>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
+
     <build>
         <directory>target</directory>
         <finalName>BBXwebworks</finalName>
 
         <plugins>
             <plugin>
-	        <groupId>org.codehaus.mojo</groupId>
-		<artifactId>exec-maven-plugin</artifactId>
-		<version>1.1.1</version>
-		<executions>
-		    <execution>
-			<id>configure</id>
-		        <phase>package</phase>
-		        <goals>
-		            <goal>exec</goal>
-		        </goals>
-			<configuration>
-			    <executable>sudo</executable>
-			    <arguments>
-                                <argument>./configure</argument>
-		            </arguments>
-			</configuration>
-	            </execution>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
                     <execution>
-			<id>jake-test</id>
-		        <phase>package</phase>
-		        <goals>
-		            <goal>exec</goal>
-		        </goals>
-			<configuration>
-			    <executable>jake</executable>
-			    <workingDirectory></workingDirectory>            
-			    <arguments>
-		                <argument>test</argument>
-		            </arguments>
-		            <successCodes>
-		                <successCode>0</successCode>
-		            </successCodes>
-			</configuration>
+                        <id>jake-test</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>jake</executable>
+                            <workingDirectory></workingDirectory>            
+                            <arguments>
+                                <argument>test</argument>
+                            </arguments>
+                            <successCodes>
+                                <successCode>0</successCode>
+                            </successCodes>
+                        </configuration>
                     </execution>
                     <execution>
-			<id>jake-lint</id>
-		        <phase>package</phase>
-		        <goals>
-		            <goal>exec</goal>
-		        </goals>
-			<configuration>
-			    <executable>jake</executable>
-			    <workingDirectory></workingDirectory>            
-			    <arguments>
-		                <argument>lint</argument>
-		            </arguments>
-		            <successCodes>
-		                <successCode>0</successCode>
-		            </successCodes>
-			</configuration>
-	            </execution>
-		</executions>
-	    </plugin>
+                        <id>jake-lint</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>jake</executable>
+                            <workingDirectory></workingDirectory>            
+                            <arguments>
+                                <argument>lint</argument>
+                            </arguments>
+                            <successCodes>
+                                <successCode>0</successCode>
+                            </successCodes>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>jake-build</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>exec</goal>
+                        </goals>
+                        <configuration>
+                            <executable>jake</executable>
+                            <workingDirectory></workingDirectory>            
+                            <arguments>
+                                <argument>build</argument>
+                            </arguments>
+                            <successCodes>
+                                <successCode>0</successCode>
+                            </successCodes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
 
             <plugin>
-		<groupId>org.apache.maven.plugins</groupId>
-		<artifactId>maven-assembly-plugin</artifactId>
-		<version>2.2</version>
-		<executions>
-			<execution>
-				<id>assembly</id>
-				<phase>package</phase>
-				<goals>
-				    <goal>single</goal>
-				</goals>
-				<configuration>          
-					<descriptors>
-						<descriptor>dist.xml</descriptor>
-					</descriptors>
-					<appendAssemblyId>false</appendAssemblyId> 
-				</configuration>
-			</execution>
-		</executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.2</version>
+                <executions>
+                    <execution>
+                        <id>assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>          
+                            <descriptors>
+                                <descriptor>dist.xml</descriptor>
+                            </descriptors>
+                            <appendAssemblyId>false</appendAssemblyId> 
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>   
         </plugins>
     </build>
