Updated the package.json files section to include the dependencies and ext folders

--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "README.md",
     "LICENSE",
     "lib",
-    "bin/bbx-framework"
+    "bin/bbx-framework",
+    "dependencies",
+    "ext"
   ]
 }
