No vars appear at one row. Temporary added functional test to ignore list until lint issues resolve

--- a/.jshintignore
+++ b/.jshintignore
@@ -4,5 +4,6 @@ target
 dependencies
 clientFiles
 ext/blackberry.example.test
+test/functional/blackberry.event.js
 lib/pps/ppsUtils.js
 lib/jnext.js
