--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "dependencies/webplatform-framework"]
 	path = dependencies/webplatform-framework
 	url = https://github.com/blackberry-webworks/webplatform-framework.git
+[submodule "dependencies/test-server/public/lib/jasmine"]
+	path = dependencies/test-server/public/lib/jasmine
+	url = https://github.com/pivotal/jasmine.git
