Add support for Linux [sudo everything non windows] + Fixed minor issue in Maven scripts + rebase

--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,9 @@
                                     <goal>exec</goal>
                                 </goals>
                                 <configuration>
-                                    <executable>./configure</executable>
+                                    <executable>sh</executable>
                                     <arguments>
+                                        <argument>configure</argument>
                                         <argument>${scm}</argument>
                                     </arguments>
                                 </configuration>
