Adds the webworks smoke test to the test/test-app directory. Also adds a jake task (jake testApp) to create the app from the current functional tests.
This should allow developers to more easily test the framework using
this app.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,12 @@
-[submodule "dependencies/test-server/public/lib/jasmine"]
-	path = dependencies/test-server/public/lib/jasmine
-	url = https://github.com/pivotal/jasmine.git
 [submodule "dependencies/webplatform"]
 	path = dependencies/webplatform
 	url = http://github.rim.net/webworks/webplatform.git
+[submodule "dependencies/jquery"]
+	path = dependencies/jquery
+	url = https://github.com/jquery/jquery.git
+[submodule "dependencies/jasmine"]
+	path = dependencies/jasmine
+	url = https://github.com/pivotal/jasmine.git
+[submodule "dependencies/jquery-mobile"]
+	path = dependencies/jquery-mobile
+	url = https://github.com/jquery/jquery-mobile.git
